--- a/shop.html
+++ b/shop.html
@@ -13,15 +13,15 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="index.html"><i class="fas fa-shopping-bag"></i> ModernShop</a>
+                    <a href="index.html"><i class="fas fa-shopping-bag"></i> SastaShop</a>
                 </div>
                 
                 <nav class="nav-menu" id="navMenu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="shop.html" class="active">Shop</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>ModernShop</h3>
+                    <h3>SastaShop</h3>
                     <p>Your one-stop destination for fashion and style. Quality products, affordable prices.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -173,8 +173,8 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="shop.html">Shop</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="#faq">FAQ</a></li>
                     </ul>
                 </div>
@@ -190,14 +190,14 @@
                 <div class="footer-col">
                     <h4>Contact Us</h4>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Fashion St, NY 10001</li>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@modernshop.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 123 Fashion St, Peshawar</li>
+                        <li><i class="fas fa-phone"></i> 0333 0000000</li>
+                        <li><i class="fas fa-envelope"></i> info@sastashop.com</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 ModernShop. All rights reserved.</p>
+                <p>&copy; 2025 SastaShop. All rights reserved.</p>
             </div>
         </div>
     </footer>
