--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="index.html"><i class="fas fa-shopping-bag"></i> ModernShop</a>
+                    <a href="index.html"><i class="fas fa-shopping-bag"></i> SastaShop</a>
                 </div>
                 
                 <nav class="nav-menu" id="navMenu">
@@ -26,7 +26,6 @@
                 </nav>
 
                 <div class="nav-icons">
-                    <a href="#" class="search-icon"><i class="fas fa-search"></i></a>
                     <a href="cart.html" class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count" id="cartCount">0</span>
@@ -127,7 +126,7 @@
                         </div>
                         <div class="info-content">
                             <h4>Our Address</h4>
-                            <p>123 Fashion Street<br>New York, NY 10001<br>United States</p>
+                            <p>123 Fashion Street, <br>Peashawar<br></p>
                         </div>
                     </div>
 
@@ -137,7 +136,7 @@
                         </div>
                         <div class="info-content">
                             <h4>Phone</h4>
-                            <p>Main: +1 (555) 123-4567<br>Support: +1 (555) 123-4568<br>Mon-Fri: 9AM - 6PM EST</p>
+                            <p>Main: 0333 0000000<br>Support: 0222 0000000<br>Mon-Fri: 9AM - 6PM EST</p>
                         </div>
                     </div>
 
@@ -147,7 +146,7 @@
                         </div>
                         <div class="info-content">
                             <h4>Email</h4>
-                            <p>General: info@modernshop.com<br>Support: support@modernshop.com<br>Sales: sales@modernshop.com</p>
+                            <p>General: info@SastaShop.com<br>Support: support@SastaShop.com<br>Sales: sales@SastaShop.com</p>
                         </div>
                     </div>
 
@@ -166,9 +165,8 @@
                         <div class="social-links">
                             <a href="#" title="Facebook"><i class="fab fa-facebook"></i></a>
                             <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-                            <a href="#" title="Pinterest"><i class="fab fa-pinterest"></i></a>
                             <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                            <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                 </div>
@@ -204,13 +202,12 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>ModernShop</h3>
+                    <h3>SastaShop</h3>
                     <p>Your one-stop destination for fashion and style. Quality products, affordable prices.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
@@ -234,14 +231,14 @@
                 <div class="footer-col">
                     <h4>Contact Us</h4>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Fashion St, NY 10001</li>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@modernshop.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 123 Fashion St, Peshawar</li>
+                        <li><i class="fas fa-phone"></i> 0333 0000000</li>
+                        <li><i class="fas fa-envelope"></i> info@sastashop.com</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 ModernShop. All rights reserved.</p>
+                <p>&copy; 2025 SastaShop. All rights reserved.</p>
             </div>
         </div>
     </footer>
