--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="index.html"><i class="fas fa-shopping-bag"></i> ModernShop</a>
+                    <a href="index.html"><i class="fas fa-shopping-bag"></i> SastaShop</a>
                 </div>
                 
                 <nav class="nav-menu" id="navMenu">
@@ -26,7 +26,6 @@
                 </nav>
 
                 <div class="nav-icons">
-                    <a href="#" class="search-icon"><i class="fas fa-search"></i></a>
                     <a href="cart.html" class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count" id="cartCount">0</span>
@@ -43,7 +42,7 @@
     <section class="page-header">
         <div class="container">
             <h1>About Us</h1>
-            <p>Learn more about ModernShop and our mission</p>
+            <p>Learn more about SastaShop and our mission</p>
         </div>
     </section>
 
@@ -51,19 +50,19 @@
     <section class="about-content">
         <div class="container">
             <div class="about-intro">
-                <h2>Welcome to ModernShop</h2>
-                <p>ModernShop is your ultimate destination for fashion and style. We believe that everyone deserves to look and feel their best, which is why we offer a curated selection of high-quality clothing, accessories, and footwear for men, women, and children.</p>
+                <h2>Welcome to SastaShop</h2>
+                <p>SastaShop is your ultimate destination for fashion and style. We believe that everyone deserves to look and feel their best, which is why we offer a curated selection of high-quality clothing, accessories, and footwear for men, women, and children.</p>
             </div>
 
             <div class="about-story">
                 <div class="story-content">
                     <h2>Our Story</h2>
-                    <p>Founded in 2020, ModernShop began with a simple mission: to make fashion accessible, affordable, and enjoyable for everyone. What started as a small online boutique has grown into a trusted fashion destination serving thousands of customers worldwide.</p>
+                    <p>Founded in 2020, SastaShop began with a simple mission: to make fashion accessible, affordable, and enjoyable for everyone. What started as a small online boutique has grown into a trusted fashion destination serving thousands of customers worldwide.</p>
                     <p>We carefully curate our collections from top brands and emerging designers, ensuring that every piece meets our high standards of quality, style, and value. Our team is passionate about fashion and committed to providing an exceptional shopping experience.</p>
                 </div>
                 <div class="story-image">
                     <div class="image-placeholder">
-                        <i class="fas fa-store"></i>
+                        <img src="./images/store1.jpg" alt="store image">
                     </div>
                 </div>
             </div>
@@ -108,33 +107,33 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-image">
-                            <i class="fas fa-user"></i>
+                            <img src="./images/ceo.jpg" alt="CEO">
                         </div>
-                        <h3>Sarah Johnson</h3>
+                        <h3>Zaib Rehman</h3>
                         <p class="member-role">Founder & CEO</p>
                         <p class="member-bio">Fashion enthusiast with 10+ years of retail experience</p>
                     </div>
                     <div class="team-member">
                         <div class="member-image">
-                            <i class="fas fa-user"></i>
+                            <img src="./images/cto.jpg" alt="CTO">
                         </div>
-                        <h3>Michael Chen</h3>
+                        <h3>Javaid Khan</h3>
                         <p class="member-role">Head of Operations</p>
                         <p class="member-bio">Ensuring smooth operations and timely deliveries</p>
                     </div>
                     <div class="team-member">
                         <div class="member-image">
-                            <i class="fas fa-user"></i>
+                            <img src="./images/director.jpg" alt="Director">
                         </div>
-                        <h3>Emily Rodriguez</h3>
+                        <h3>Sara Ali</h3>
                         <p class="member-role">Creative Director</p>
                         <p class="member-bio">Curating the latest trends and collections</p>
                     </div>
                     <div class="team-member">
                         <div class="member-image">
-                            <i class="fas fa-user"></i>
+                            <img src="./images/manager.jpg" alt="Manager">
                         </div>
-                        <h3>David Kim</h3>
+                        <h3>Rehman Khan</h3>
                         <p class="member-role">Customer Success Manager</p>
                         <p class="member-bio">Dedicated to making your experience exceptional</p>
                     </div>
@@ -160,7 +159,6 @@
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
