--- a/cart.html
+++ b/cart.html
@@ -13,21 +13,19 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="index.html"><i class="fas fa-shopping-bag"></i> ModernShop</a>
+                    <a href="index.html"><i class="fas fa-shopping-bag"></i> SastaShop</a>
                 </div>
                 
                 <nav class="nav-menu" id="navMenu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="shop.html">Shop</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
                 <div class="nav-icons">
-                    <a href="#" class="search-icon"><i class="fas fa-search"></i></a>
-                    <a href="login.html" class="user-icon"><i class="fas fa-user"></i></a>
                     <a href="cart.html" class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count" id="cartCount">0</span>
@@ -107,13 +105,12 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>ModernShop</h3>
+                    <h3>SastaShop</h3>
                     <p>Your one-stop destination for fashion and style. Quality products, affordable prices.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
@@ -137,14 +134,14 @@
                 <div class="footer-col">
                     <h4>Contact Us</h4>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Fashion St, NY 10001</li>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@modernshop.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 123 Fashion St, Peshawar</li>
+                        <li><i class="fas fa-phone"></i> 0333 0000000</li>
+                        <li><i class="fas fa-envelope"></i> info@sastashop.com</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 ModernShop. All rights reserved.</p>
+                <p>&copy; 2025 SastaShop. All rights reserved.</p>
             </div>
         </div>
     </footer>
