--- a/about.html
+++ b/about.html
@@ -8,14 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
                     <a href="index.html"><i class="fas fa-shopping-bag"></i> SastaShop</a>
                 </div>
-                
                 <nav class="nav-menu" id="navMenu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -24,8 +22,10 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-
                 <div class="nav-icons">
+                    <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+                        <i class="fas fa-moon"></i>
+                    </button>
                     <a href="cart.html" class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count" id="cartCount">0</span>
@@ -38,7 +38,6 @@
         </div>
     </header>
 
-    <!-- Page Header -->
     <section class="page-header">
         <div class="container">
             <h1>About Us</h1>
@@ -46,7 +45,6 @@
         </div>
     </section>
 
-    <!-- About Content -->
     <section class="about-content">
         <div class="container">
             <div class="about-intro">
@@ -148,7 +146,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-grid">
