--- a/cart.html
+++ b/cart.html
@@ -26,6 +26,9 @@
                 </nav>
 
                 <div class="nav-icons">
+                    <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+                        <i class="fas fa-moon"></i>
+                    </button>
                     <a href="cart.html" class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count" id="cartCount">0</span>
@@ -52,7 +55,7 @@
             <div class="cart-wrapper">
                 <!-- Cart Items -->
                 <div class="cart-items" id="cartItems">
-                    <!-- Cart items will be loaded here dynamically -->
+                    
                 </div>
 
                 <!-- Cart Summary -->
