--- a/product.html
+++ b/product.html
@@ -26,6 +26,9 @@
                 </nav>
 
                 <div class="nav-icons">
+                    <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+                        <i class="fas fa-moon"></i>
+                    </button>
                     <a href="cart.html" class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count" id="cartCount">0</span>
@@ -48,7 +51,7 @@
             </div>
 
             <div class="product-wrapper" id="productDetails">
-                <!-- Product details will be loaded here -->
+                
             </div>
         </div>
     </section>
@@ -58,7 +61,7 @@
         <div class="container">
             <h2 class="section-title">You May Also Like</h2>
             <div class="products-grid" id="relatedProducts">
-                <!-- Related products will be loaded here -->
+                
             </div>
         </div>
     </section>
