--- a/shop.html
+++ b/shop.html
@@ -26,6 +26,9 @@
                 </nav>
 
                 <div class="nav-icons">
+                    <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+                        <i class="fas fa-moon"></i>
+                    </button>
                     <a href="cart.html" class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count" id="cartCount">0</span>
@@ -146,7 +149,7 @@
                     </div>
 
                     <div class="products-grid" id="productsGrid">
-                        <!-- Products will be dynamically loaded here -->
+                        
                     </div>
                 </div>
             </div>
